--- a/ReactNativeLIFE/package.json
+++ b/ReactNativeLIFE/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-scrollable-tab-view": "^0.7.2",
+    "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0"
   },
